<resources>
    <string name="app_name">smBook</string>
    <string name="action_settings">Settings</string>
    <string name="about_text">About</string>
    <string name="reviews">Reviews</string>
    <string name="schedule">Schedule</string>
    <string name="armenian">Armenian</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="user">User</string>
    <string name="search">Search</string>
    <string name="city">City</string>
    <string name="login">Login</string>
    <string name="ok">OK</string>
    <string name="by_movie_title">By movie title</string>
    <string name="by_director">By director</string>
    <string name="webpage">Webpage</string>
    <string name="working_hours">Working hours</string>
    <string name="tickets_price">Tickets price</string>
    <string name="address_text">address text</string>
    <string name="address">Address</string>
    <string name="cinema_name">Cinema Name</string>
    <string name="password">Password</string>
    <string name="movie_name">Movie Name</string>
    <string name="about">About</string>
    <string name="buy_tickets">Buy tickets</string>
</resources>
