<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context="net.XXX.YYY.ZZZZ" >
        <item android:id="@+id/action_settings"
            android:title="@string/action_settings"
            android:orderInCategory="200"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_city_filter"
            android:orderInCategory="300"
            android:title="@string/search"
            android:icon="@drawable/ic_pin_drop_black_24dp"
            app:showAsAction="ifRoom"
            />
        <item
            android:id="@+id/action_login"
            android:orderInCategory="100"
            android:title="@string/user"
            android:icon="@drawable/ic_person_black_24dp"
            app:showAsAction="ifRoom"/>
</menu>