<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/main_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:elevation="6dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

   <LinearLayout
       android:id="@+id/bar_cinema_about"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_below="@+id/toolbar">

    <!--<ImageView-->
       <!--android:id="@+id/back_arrow_image_view"-->
       <!--android:layout_width="wrap_content"-->
       <!--android:layout_height="24dp"-->
       <!--android:src="@drawable/ic_keyboard_backspace_black_24dp"-->

       <!--/>-->

    <TextView
        android:id="@+id/cinema_name_text_view_about"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:text="@string/cinema_name"
        android:textAlignment="center"
       />

   </LinearLayout>

    <ImageView
        android:id="@+id/cinema_address_map_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        android:layout_below="@+id/bar_cinema_about"
        />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2"
        android:orientation="horizontal"
        android:layout_below="@+id/cinema_address_map_image_view"
        >

    <TextView
        android:id="@+id/cinema_address_text_view_about"
        android:text="@string/address"
        android:layout_gravity="left|top"
        android:layout_margin="10dp"
        />

    <TextView
        android:id="@+id/cinema_address_text"
        android:text="@string/address_text"
        android:layout_gravity="left|top"
        android:layout_margin="10dp"
        />

        <TextView
            android:id="@+id/cinema_price_text_view_about"
            android:text="@string/tickets_price"
            android:layout_gravity="left|top"
            android:layout_margin="10dp"
            />

        <TextView
            android:id="@+id/cinema_price_text"
            android:text="price range"
            android:layout_gravity="left|top"
            android:layout_margin="10dp"
            />

        <TextView
            android:id="@+id/cinema_phone_text_view_about"
            android:text="Phone number"
            android:layout_gravity="left|top"
            android:layout_margin="10dp"
            />

        <TextView
            android:id="@+id/cinema_phone_text"
            android:text="num"
            android:layout_gravity="left|top"
            android:layout_margin="10dp"
            />

        <TextView
            android:id="@+id/cinema_hours_text_view_about"
            android:text="@string/working_hours"
            android:layout_gravity="left|top"
            android:layout_margin="10dp"
            />

        <TextView
            android:id="@+id/cinema_hours_text"
            android:text="text"
            android:layout_gravity="left|top"
            android:layout_margin="10dp"
            />

        <Button
        android:id="@+id/cinema_fb_button"
        android:text="Facebook"
        android:layout_gravity="left|top"
        android:layout_margin="10dp"
        />

        <Button
            android:id="@+id/cinema_webpage_button"
            android:text="@string/webpage"
            android:layout_gravity="left|top"
            android:layout_margin="10dp"
            />

    </GridLayout>



</RelativeLayout>